test build args

--- a/docker.bk/apache-php-8.2/Dockerfile
+++ b/docker.bk/apache-php-8.2/Dockerfile
@@ -1,12 +1,4 @@
 ARG VERSION
 
-FROM httpd:latest
-
-# Define VERSION as a build argument
-
-# Set the environment variable DIR using the build argument
-ENV DIR=${VERSION}
-
-# Create the directory using the environment variable
-RUN mkdir ${DIR}
+FROM httpd:${VERSION}
 
